2006-10-20  Aaron Stone  <aaron@serendipity.cx>

	* db.h, dbmail.h.in:
	Moved three constants from db.h to dbmail.h.in.
	* db.c, misc.c, dbmailtypes.h:
	More better handling of #Public mailboxes and changed instances of
	'status IN (0, 2)' to 'status < 2' for better use of indexes.
	* sql/sqlite/create_tables.sqlite, sql/postgresql/create_tables.pgsql,
	sql/mysql/create_tables.mysql:
	Create the __public__ user at table creation time.
	* pipe.c, maintenance.c:
	Minor updates.
	* check_dbmail_db.c, check_dbmail_mailbox.c:
	Comment out unused functions.

2006-10-20  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, check_dbmail_mailbox.c, dbmail-mailbox.c, 
	  dbmail-mailbox.h, dbmailtypes.h, imap4.c, imap4.h, imapcommands.c, 
	  imapcommands.h, test-scripts/testthread.txt:
	added thread=orderedsubject capability to imap

2006-10-19  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c, export.c:
	allow export to dump all mailboxes for a user
	* check_dbmail.h, check_dbmail_imapd.c, dbmail-imapsession.c, 
	  debian/control, misc.c:
	properly descend into message/rfc822 mime-parts during fetch (closes #399)

2006-10-13  Paul J Stevens <paul@nfg.nl>

	* dbmail.schema:
	updated schema file (lars)
	* modules/dbsqlite.c:
	set busy handler on sqlite driver (jwagner)

2006-10-09  Paul J Stevens <paul@nfg.nl>

	* dbmail.h.in, modules/authldap.c, modules/authsql.c:
	minor cleanups in PUBLIC_FOLDER_USER usage
	* db.c, dbmail-imapsession.c, dbmail-mailbox.c, dbmail-message.c, 
	  modules/authsql.c:
	remove quoting on numbers in queries

2006-10-07  Aaron Stone  <aaron@serendpity.cx>

	* misc.h, misc.c:
	Added two more return pointers to mailbox_remove_namespace, for the
	namespace itself and the username under #Users namespace.
	* db.c:
	Modified db_imap_split_mailbox and db_mailbox_create_with_parents to
	correctly handle permissions in other namespaces (closes bug #424).

2006-10-06  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	check for NULL trees